# hacs-e3dc-maestro

./: .gitignore  CHANGELOG.md  README.de.md  README.md  RELEASE_NOTES_v0.3.10.md  RELEASE_NOTES_v0.3.11.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.3.6.md  RELEASE_NOTES_v0.3.7.md  RELEASE_NOTES_v0.3.8.md  RELEASE_NOTES_v0.3.9.md  pyproject.toml
.github/workflows/: ci.yml
custom_components/e3dc_maestro/: __init__.py  battery_sizing.py  binary_sensor.py  button.py  config_flow.py  config_flow_selectors.py  const.py  consumption_stats.py  control_engine.py  control_tariff.py  coordinator.py  coordinator_act.py  coordinator_diagnostics.py  coordinator_forecast.py  coordinator_helpers.py  coordinator_sensors.py  coordinator_sizing.py  dashboard_frontend.py  diagnostics.py  explanation.py  forecast.py  manifest.json  number.py  optimizer.py  pv_forecast_profile.py  sensor.py  sensor_device.py  strings.json  switch.py
custom_components/e3dc_maestro/frontend/: __init__.py  e3dc-maestro-strategy.js  maestro_dashboard.json
dashboards/: e3dc_maestro.yaml  maestro_dashboard.yaml  maestro_dashboard_modern.yaml
docs/: beispiel-konfiguration-betrieb.md  example-production-configuration.md  recorder-exclusions-example.md
scripts/: sync_dashboard_strategy.py  validate_dashboards.py  write_dashboard.py
tests/: conftest.py  test_battery_sizing.py  test_control_engine.py  test_coordinator_debounce.py  test_coordinator_forecast.py  test_dashboard_strategy.py  test_forecast.py  test_migration.py  test_optimizer.py  test_sensor_explanation.py
(+1 files in other folders)
