[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hacs-e3dc-maestro"
version = "0.3.12"
description = "E3DC Maestro Home Assistant custom integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["custom_components", "tests"]

[tool.ruff.lint]
# Correctness-first gate for CI. Unused-import cleanup is incremental.
select = ["E9", "F63", "F7", "F82"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["custom_components/e3dc_maestro"]
omit = [
  "custom_components/e3dc_maestro/config_flow.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 30
